Update theme change button
 - Have the theme change button be a main button on the toolbar
 - Give the theme change button appropriate icons to indicate the state to change to

--- a/assets/Makefile
+++ b/assets/Makefile
@@ -6,3 +6,5 @@
 
 all:
 	fyne bundle --pkg assets --name ResourceSwapPng -o bundled.go icons/swap.svg
+	fyne bundle -a --name ResourceSunPng -o bundled.go icons/sun.svg
+	fyne bundle -a --name ResourceMoonPng -o bundled.go icons/moon.svg
